perf(mcp): eliminate N+1 queries in list_applications and get_application_detail
list_applications: was 1+3N queries per request (company lookup + 2 COUNT
queries per application). Now 4 fixed queries via batch fetch using existing
findByJobApplicationIdIn / findAllById repository methods.

get_application_detail: convertToInterviewDTO was issuing one findById per
interview record to resolve stage name. Now builds a Map<id,name> from the
already-fetched stages list and looks up in memory.

Also skips redundant COUNT queries in detail view by using list.size() instead.